bat.bool1.posneg.PosNeg.scala.code
def posNeg(a:Int, b:Int, negative:Boolean):Boolean = {
  var c = a*b
  if(c<0 && negative){
    return false
  } else if (c>0 && (a>0 && b>00)){
    return false
  } else{
    return true
  }